# functions-framework-cpp

./: .actrc  .clang-format  .clang-tidy  .cmake-format.py  .codecov.yml  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-framework.yaml  build.yaml  conformance.yml  coverage.yaml  images.yaml  install.yaml  sanitize.yaml  style.yaml
build_scripts/: Dockerfile  README.md  build-application.Dockerfile  generate-wrapper.sh  pack.Dockerfile
build_scripts/cmake/: CMakeLists.txt
build_scripts/pack/: build.in  (+3 more)
ci/: README.md  build-examples.sh  build-examples.yaml  generate-build-examples.sh  restore-vcpkg-from-cache.sh  update-markdown-code-snippets.sh
cmake/: BuildMetadata.cmake  FunctionsFrameworkCppHelpers.cmake  InstallHeaders.cmake
docs/: code-of-conduct.md
examples/: CMakeLists.txt  README.md  cloud_event_examples_test.cc  howto-guides.md  http_examples_test.cc  http_integration_server.cc  http_integration_test.cc  site_test.cc
examples/hello_cloud_event/: hello_cloud_event.cc
examples/hello_from_namespace/: hello_from_namespace.cc
examples/hello_from_nested_namespace/: hello_from_nested_namespace.cc
examples/hello_gcs/: CMakeLists.txt  hello_gcs.cc  vcpkg.json
examples/hello_multiple_sources/: greeting.cc  greeting.h  hello_multiple_sources.cc
examples/hello_with_third_party/: CMakeLists.txt  hello_with_third_party.cc  vcpkg.json
examples/hello_world/: hello_world.cc
examples/howto_use_legacy_code/: CMakeLists.txt  README.md  howto_use_legacy_code.cc  main.cc
examples/howto_use_legacy_code/legacy/: .gitignore  Makefile  legacy.cc  legacy.h
examples/site/bearer_token/: CMakeLists.txt  bearer_token.cc  vcpkg.json
examples/site/concepts_after_response/: concepts_after_response.cc
examples/site/concepts_after_timeout/: concepts_after_timeout.cc
examples/site/concepts_filesystem/: CMakeLists.txt  concepts_filesystem.cc
examples/site/concepts_request/: concepts_request.cc
examples/site/concepts_stateless/: concepts_stateless.cc
examples/site/env_vars/: env_vars.cc
examples/site/hello_world_content/: hello_world_content.cc  parse_www_form_urlencoded.cc
examples/site/hello_world_error/: hello_world_error.cc  vcpkg.json
examples/site/hello_world_get/: hello_world_get.cc  vcpkg.json
examples/site/hello_world_http/: hello_world_http.cc
examples/site/hello_world_pubsub/: CMakeLists.txt  hello_world_pubsub.cc  vcpkg.json
examples/site/hello_world_storage/: CMakeLists.txt  hello_world_storage.cc  vcpkg.json
examples/site/howto_create_container/: README.md
examples/site/howto_deploy_cloud_event/: README.md
examples/site/howto_deploy_to_cloud_run/: README.md
examples/site/howto_local_development/: CMakeLists.txt  README.md  local_server.cc  vcpkg.json
examples/site/howto_offload_builder_creation/: README.md
examples/site/http_content/: http_content.cc
examples/site/http_cors/: http_cors.cc
examples/site/http_cors_auth/: http_cors_auth.cc
examples/site/http_form_data/: CMakeLists.txt  http_form_data.cc  vcpkg.json
examples/site/http_method/: http_method.cc
examples/site/http_xml/: http_xml.cc  vcpkg.json
examples/site/log_helloworld/: log_helloworld.cc  vcpkg.json
examples/site/log_stackdriver/: log_stackdriver.cc  vcpkg.json
examples/site/pubsub_subscribe/: pubsub_subscribe.cc
examples/site/testing_http/: CMakeLists.txt  http_integration_server.cc  http_integration_test.cc  http_unit_test.cc
examples/site/testing_pubsub/: CMakeLists.txt  README.md  pubsub_integration_server.cc  pubsub_integration_test.cc  pubsub_system_test.cc  pubsub_unit_test.cc
examples/site/testing_storage/: CMakeLists.txt  README.md  storage_integration_server.cc  storage_integration_test.cc  storage_system_test.cc  storage_unit_test.cc
examples/site/tips_gcp_apis/: CMakeLists.txt  tips_gcp_apis.cc  vcpkg.json
examples/site/tips_infinite_retries/: tips_infinite_retries.cc
examples/site/tips_lazy_globals/: tips_lazy_globals.cc
examples/site/tips_retry/: tips_retry.cc
examples/site/tips_scopes/: tips_scopes.cc
examples/site/tutorial_cloud_bigtable/: CMakeLists.txt  tutorial_cloud_bigtable.cc  vcpkg.json
examples/site/tutorial_cloud_spanner/: tutorial_cloud_spanner.cc  vcpkg.json
google/cloud/functions/: CMakeLists.txt  cloud_event.cc  cloud_event.h  cloud_event_test.cc  config.cmake.in  config.pc.in  framework.cc  framework.h  function.cc  function.h  http_request.cc  http_request.h  http_request_test.cc  http_response.cc  http_response.h  http_response_test.cc  user_functions.h  version.cc  version.h  version_test.cc
google/cloud/functions/integration_tests/: CMakeLists.txt  basic_integration_test.cc  cloud_event_conformance.cc  cloud_event_handler.cc  cloud_event_integration_test.cc  echo_server.cc  http_conformance.cc
google/cloud/functions/integration_tests/hello_world/: CMakeLists.txt  hello_world.cc
google/cloud/functions/internal/: base64_decode.cc  base64_decode.h  base64_decode_test.cc  build_info.cc.in  build_info.h  call_user_function.cc  call_user_function.h  call_user_function_test.cc  compiler_info.cc  compiler_info.h  compiler_info_test.cc  framework.cc  framework.h  framework_impl.cc  framework_impl.h  framework_impl_test.cc  framework_test.cc  function_impl.cc  function_impl.h  function_impl_test.cc  http_message_types.h  parse_cloud_event_http.cc  parse_cloud_event_http.h  parse_cloud_event_http_test.cc  parse_cloud_event_json.cc  parse_cloud_event_json.h  parse_cloud_event_json_test.cc  parse_cloud_event_legacy.cc  parse_cloud_event_legacy.h  parse_cloud_event_legacy_test.cc  parse_cloud_event_storage.cc  parse_cloud_event_storage.h  parse_cloud_event_storage_test.cc  parse_options.cc  parse_options.h  parse_options_test.cc  setenv.cc  setenv.h  user_functions.h  version_info.h  (+6 more)
google/cloud/functions/mocks/: mock_http_request.h
google/cloud/functions/quickstart/: CMakeLists.txt  README.md  quickstart.cc  vcpkg.json
google/cloud/functions/quickstart/hello_function/: hello_function.cc
pack/: builder.toml
release/: cutting-a-release.md
(+44 files in other folders)
